# transport-matters

./: .gitignore  CLAUDE.md  LESSONS.md  LICENSE  NORTHSTAR.md  NOW.md  PROJECT.md  Procfile  QUICKSTART.md  README.md  TLDR.md  docker-compose.yml  install.sh  justfile  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.sh  review-slice-4-removal.md  settings.example.toml  tsconfig.base.json  tsconfig.bundler.json
api/: .env.example  .pre-commit-config.yaml  CLAUDE.md  README.md  conftest.py  justfile  pyproject.toml
api/migrations/: env.py  script.py.mako
api/migrations/versions/: 0001_session_store_foundation.py  0002_event_tier1_indexes.py  0003_event_dead_letter.py  0004_session_purpose_visibility.py  0005_session_template_provenance.py  0006_spaces_foundation.py
api/src/manicure/: __init__.py  __main__.py  addon.py  addon_handlers.py  addon_runtime.py  breakpoint.py  broadcast.py  cli.py  config.py  counting.py  exceptions.py  exchange_recorder.py  exchange_stats.py  flow_state.py  ir.py  lock.py  logging.py  main.py  manifest.py  override_audit.py  override_ops_messages.py  override_ops_metadata.py  override_state.py  override_targets.py  overrides.py  pause_session.py  pipeline.py  request_pipeline.py  rules.py  supervisor.py  test_addon_http_provisional.py  test_addon_phases.py  test_breakpoint.py  test_broadcast.py  test_cli.py  test_codex_diagnostics.py  test_codex_transport.py  test_codex_transport_turns.py  test_counting.py  test_exchange_recorder_emit.py  (+33 more)
api/src/manicure/adapters/: __init__.py  anthropic.py  base.py  test_adapter_registry.py  test_anthropic.py  test_codex.py
api/src/manicure/cli/: __init__.py  __main__.py  _helpers.py  banner.py  codex_cmd.py  conftest.py  diagnose.py  help.py  instances.py  launch_runtime.py  net.py  paths.py  prompt.py  runner.py  test_codex.py  test_diagnose.py  test_help.py  test_instances.py  test_net.py  test_paths.py  test_ports.py  test_prompt.py  test_runner.py  test_start.py  test_start_acceptance.py  test_start_children.py  test_start_passthrough.py  test_start_print.py  test_start_storage.py  test_start_validation.py  test_start_workspace.py  test_trust.py  test_version.py
api/src/manicure/codex/: __init__.py  adapter.py  derivation.py  derivation_codec.py  derivation_contract.py  derivation_engine.py  diagnostics.py  events.py  exchange.py  exchange_derivation.py  preserved_raw.py  protocol.py  repair.py  request_parser.py  request_serializer.py  response_parser.py  session_metadata.py  test_derivation_contract.py  test_derivation_incremental.py  test_derivation_replay.py  test_derivation_support.py  test_diagnostics.py  test_events.py  test_repair.py  test_repair_diagnostics.py  test_repair_migration.py  test_repair_rebuild.py  test_repair_safety.py  test_repair_support.py  test_session_metadata.py  test_timeline_contract.py  test_transport.py  test_transport_addon.py  test_transport_lifecycle.py  test_transport_support.py  test_transport_timestamps.py  test_transport_turn_close.py  test_transport_turn_completion.py  test_transport_turn_derivation.py  test_transport_turn_pause.py  (+4 more)
api/src/manicure/storage/: __init__.py  base.py  disk.py  disk_helpers.py  test_disk.py  test_disk_atomic_write.py  test_disk_cache_backfill.py  test_disk_codex_artifacts.py  test_disk_delete.py  test_disk_delete_recovery.py  test_disk_exchange.py  test_disk_index.py  test_disk_index_entry.py  test_disk_layout.py  test_disk_legacy_anchor.py  test_disk_persist.py
api/src/transport_matters/: __init__.py  __main__.py  _exchange_recorder_http_fixtures.py  _exchange_recorder_http_support.py  addon.py  addon_handlers.py  addon_runtime.py  atomic_io.py  breakpoint.py  broadcast.py  canonicalization.py  capabilities.py  captured_claude.py  captured_codex.py  captured_run.py  captured_run_context.py  captured_run_dependencies.py  captured_run_models.py  channel-specs.json  channel.py  client_version.py  config.py  counting.py  desktop_event.py  desktop_runtime.py  env_keys.py  exchange_recorder.py  exchange_recorder_artifacts.py  exchange_recorder_unparsed.py  exchange_stats.py  flow_state.py  force_http_fallback_addon.py  ir.py  launch_environment.py  launch_manifest.py  lock.py  loopback.py  main.py  manifest.py  model_ids.py  (+105 more)
api/src/transport_matters/adapters/: __init__.py  anthropic.py  base.py  test_adapter_registry.py  test_anthropic.py  test_codex.py
api/src/transport_matters/api/: test_import_boundary.py
api/src/transport_matters/cli/: __init__.py  __main__.py  _helpers.py  banner.py  bind_failure.py  bind_retry.py  channel_cmd.py  claude_home.py  codex_cmd.py  codex_home.py  codex_session.py  conftest.py  db_cmd.py  desktop_cmd.py  desktop_launch_config.py  desktop_recovery.py  desktop_runtime.py  diagnose.py  help.py  home_constants.py  home_io.py  home_overlay.py  home_seed.py  home_seeders.py  identity.py  instances.py  launch_options.py  launch_outcomes.py  launch_profile.py  launch_runtime.py  net.py  paths.py  ports.py  prompt.py  runner.py  runs_health.py  runtime_home.py  runtime_registry.py  start_cmd.py  tail_cmd.py  (+42 more)
api/src/transport_matters/codex/: __init__.py  adapter.py  continuity.py  derivation.py  derivation_codec.py  (+58 more)
api/tests/: test_distribution_metadata.py  test_release_identity.py  test_release_script.py  test_run_manager.py  test_transport_matters_namespace.py
api/tests/fixtures/: README.md  claude_transcript.jsonl  codex_response_create.json  codex_response_create_agent_home.json  codex_response_create_later_turn.json  codex_response_create_outputs_only.json  codex_response_create_tool_outputs.json  codex_rollout.jsonl  codex_transport_chatgpt_403.json  codex_transport_chatgpt_403_response.txt  codex_transport_chatgpt_success.json  codex_transport_proxy_502.json  codex_transport_proxy_502_response.txt
api/tests/integration/: shared_proxy_load_harness.py  test_backend_launch_smoke.py  test_raw_fetch_roundtrip.py  test_shared_proxy_load_harness_unit.py  test_shared_proxy_subprocess.py  test_static_bundles.py  test_static_canvas.py  test_transcript_snapshot_roundtrip.py
(+696 files in other folders)
