#:schema https://json.schemastore.org/pyproject.json

[project]
name = "manicure"
dynamic = ["version"]
description = "Provider-neutral context control plane for coding agents"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Stuart Robinson", email = "stuart@alphab.io" },
]
keywords = [
    "mitmproxy",
    "llm",
    "claude",
    "anthropic",
    "context",
    "inspector",
    "proxy",
    "debugging",
    "coding-agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "mitmproxy>=12.2,<13",
    "aiofiles>=24.0",
    "typer>=0.15",
]

[project.scripts]
manicure = "manicure.cli:main"

[project.urls]
Homepage = "https://github.com/srobinson/manicure"
Repository = "https://github.com/srobinson/manicure"
Issues = "https://github.com/srobinson/manicure/issues"
Changelog = "https://github.com/srobinson/manicure/releases"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "ruff>=0.15",
    "mypy>=1.14",
    "pre-commit>=4.0",
    "types-aiofiles>=25.1.0.20260409",
]

# ---- uv ----
# Mitmproxy 12.2.1 pins upper bounds that exclude every patched version of
# its own transitive deps:
#
#   flask      <=3.1.2   (CVE fixed in 3.1.3)
#   tornado    <=6.5.2   (CVEs fixed in 6.5.5)
#   pyOpenSSL  <=25.3.0  (CVEs fixed in 26.0.0)
#
# Mitmproxy's `main` branch has already relaxed the flask and tornado
# bounds; pyOpenSSL is still pinned upstream but 26.0.0 is a clean
# upgrade (no API removals, only a behavioural change to SNI callback
# exception handling). Overriding here closes the six Dependabot alerts
# against `api/uv.lock` ahead of the next mitmproxy release. Drop these
# entries once mitmproxy ships a release with relaxed pins.
[tool.uv]
override-dependencies = [
    "tornado>=6.5.5",
    "flask>=3.1.3",
    "pyOpenSSL>=26.0.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { root = "..", version_scheme = "no-guess-dev" }

[tool.hatch.build.hooks.vcs]
version-file = "src/manicure/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/manicure"]
exclude = ["**/test_*.py"]
artifacts = ["src/manicure/_version.py", "src/manicure/www/**"]

[tool.hatch.build.targets.sdist]
only-include = ["src/manicure", "tests", "README.md", "LICENSE"]
artifacts = ["src/manicure/_version.py"]

# ---- Ruff ----
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "C4",    # flake8-comprehensions
    "RET",   # flake8-return
    "PTH",   # flake8-use-pathlib
    "TCH",   # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default arg (required by FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "E402",    # imports after os.environ setup in conftest
]

[tool.ruff.lint.isort]
known-first-party = ["manicure"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---- mypy ----
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/", ".venv/"]
plugins = ["pydantic.mypy"]

# ---- pytest ----
[tool.pytest.ini_options]
testpaths = ["src", "tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

# ---- coverage ----
[tool.coverage.run]
source = ["manicure"]
omit = ["*/test_*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
