#:schema https://json.schemastore.org/pyproject.json

[project]
name = "transport-matters"
dynamic = ["version"]
description = "Provider-neutral context control plane for coding agents"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Stuart Robinson", email = "stuart@alphab.io" },
]
keywords = [
    "mitmproxy",
    "llm",
    "claude",
    "anthropic",
    "context",
    "inspector",
    "proxy",
    "debugging",
    "coding-agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "mitmproxy>=12.2,<13",
    "aiofiles>=24.0",
    "typer>=0.15",
]

[project.scripts]
transport-matters = "transport_matters.cli:main"

[project.urls]
Homepage = "https://github.com/littleorgans/transport-matters"
Repository = "https://github.com/littleorgans/transport-matters"
Issues = "https://github.com/littleorgans/transport-matters/issues"
Changelog = "https://github.com/littleorgans/transport-matters/releases"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "ruff>=0.15",
    "mypy>=1.14",
    "pre-commit>=4.0",
    "types-aiofiles>=25.1.0.20260409",
]

# ---- uv ----
# Mitmproxy 12.2.2 relaxed its flask (<=3.1.3) and tornado (<=6.5.5) upper
# bounds to include the patched versions, so those overrides are gone.
# pyOpenSSL is still capped at <=25.3.0 upstream; 26.0.0 is a clean upgrade
# (no API removals, only a behavioural change to SNI callback exception
# handling). Override remains to close the Dependabot alert. Drop this
# entry once mitmproxy relaxes its pyOpenSSL bound.
[tool.uv]
override-dependencies = [
    "pyOpenSSL>=26.0.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { root = "..", version_scheme = "no-guess-dev" }

[tool.hatch.build.targets.wheel]
packages = ["src/transport_matters"]
exclude = ["**/test_*.py"]
artifacts = ["src/transport_matters/www/**"]

[tool.hatch.build.targets.sdist]
only-include = ["src/transport_matters", "tests", "README.md", "LICENSE"]

# ---- Ruff ----
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "C4",    # flake8-comprehensions
    "RET",   # flake8-return
    "PTH",   # flake8-use-pathlib
    "TCH",   # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default arg (required by FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "E402",    # imports after os.environ setup in conftest
]

[tool.ruff.lint.isort]
known-first-party = ["transport_matters"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---- mypy ----
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/", ".venv/"]
plugins = ["pydantic.mypy"]

# ---- pytest ----
[tool.pytest.ini_options]
testpaths = ["src", "tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

# ---- coverage ----
[tool.coverage.run]
source = ["transport_matters"]
omit = ["*/test_*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
